--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/themes/skins/default/theme-default.scss";
+@import "primeicons/primeicons.css";
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
+html,
+body,
+.app-root {
+  display: block;
+  //position: relative;
+  width: 100vw !important;
+  height: 100vh !important;
+  font-size: 16px !important;
+  padding: 0;
+  margin: 0;
+  left: 0;
+  top: 0;
+  overflow-y: hidden;
+  font-family: $regularFont;
+  font-family: 'Frutiger LT Arabic', sans-serif;
+  @media screen  and (max-width:576px) {
+    font-size: 12px;
+  }
+}
+
+
