--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       </nav>
       <main class="flex-1 p-4 mb-3 h-full overflow-y-auto">
         <div class="layout-content min-h-full">
-          <app-content></app-content>
+          <app-pdf-viewer></app-pdf-viewer>
         </div>
         <p-scrollTop
           target="parent"
